Fix overflowing lists/images in details

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -86,6 +86,13 @@ body {
     padding-bottom: 15px;
 }
 
+.horizontal-container {
+    overflow: auto;
+    overflow-y: hidden;
+    margin: 0 auto;
+    white-space: nowrap
+}
+
 .card-detail {
     margin-bottom: .5em;
 }
